--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "homepage": "https://github.com/RutgersUniversityVirtualWorlds/pixelwall#readme",
   "dependencies": {
     "config": "^1.26.1",
+    "file-exists": "^4.0.0",
     "johnny-five": "^0.11.3",
     "prompt": "^1.0.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "tape": "^4.7.0"
   }
 }
