--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "config": "^1.26.1",
     "file-exists": "^4.0.0",
     "johnny-five": "^0.11.3",
+    "linkedlist": "^1.0.1",
     "prompt": "^1.0.0",
     "winston": "^2.3.1"
   },
