--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "johnny-five": "^0.11.3",
     "linkedlist": "^1.0.1",
     "prompt": "^1.0.0",
+    "socket.io-client": "^2.0.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {
