--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/RutgersUniversityVirtualWorlds/pixelwall#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "config": "^1.26.1",
+    "express": "^4.16.3",
     "file-exists": "^4.0.0",
     "johnny-five": "^0.11.3",
     "linkedlist": "^1.0.1",
