--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "config": "^1.26.1",
+    "dnssd": "^0.3.3",
     "express": "^4.16.3",
     "file-exists": "^4.0.0",
     "johnny-five": "^0.11.3",
