--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "linkedlist": "^1.0.1",
     "local-ipv4-address": "0.0.2",
     "prompt": "^1.0.0",
-    "socket.io-client": "^2.0.3",
+    "socket.io": "^2.1.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
