--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "local-ipv4-address": "0.0.2",
     "prompt": "^1.0.0",
     "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
